--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-parcelize'
 
 android {
     compileSdkVersion 30
@@ -42,4 +43,6 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     annotationProcessor "androidx.annotation:annotation:$annotationProcessorVersion"
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 }
